# StateSandbox

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build_and_test.yml
src/: library.h  main.cpp  manager.cpp  manager.h  state.cpp  state.h  worker.cpp  worker.h
src/api/: api.cpp  api.h  sandbox.py
tst/: test_api.c  test_api.py
